updated at: 2023-04-25 21:58, [Updated] 各国の出口標識 EXIT Signs - IW Store - BOOTH

--- a/VRChat/11/1283011.html
+++ b/VRChat/11/1283011.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9GR98kaXo81ZKbC8/8By74dtARKg8mqOi3smgqyUGHg="></script>
+    "7oDK9E6wKJkZD0y/PYTlei0xmiZmFvQNIr2X152aw20="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Updated] 各国の出口標識 EXIT Signs","description":"2020年10月15日更新\n\n内容物：\n日本、韓国、台湾2種類、香港、マカオ、中国、タイ、マレーシア、シンガポール、オーストラリア、ロシア、ヨーロッパ、アメリカ２色\n\nパッケージに含むマテリアル数: 5\n1個でのマテリアル数:2\n\nUpdated : 15 Oct 2020\n\nIncluded exit signs:\nJapan, Korea, Taiwan(2Types), Hong Kong, Macao, China, Thailand, Malaysia, Singapore, Australia, Russia, Europe and United States (red and green)\n\nMaterials in this package: 5\nMaterials in 1 model: 2","url":"https://booth.pm/ja/items/1283011","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3102054f-dac7-48b0-b708-c4012197d613/i/1283011/6402ed57-81b8-4059-96d5-00cff6f53267_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9GR98kaXo81ZKbC8/8By74dtARKg8mqOi3smgqyUGHg="></script>
+    nonce="7oDK9E6wKJkZD0y/PYTlei0xmiZmFvQNIr2X152aw20="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1283011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              682
+                              685
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1283011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              682
+                              685
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
