updated at: 2023-04-25 21:59, 【無料配布】1st EP [Mandara] - SIGMAΣSTORE - BOOTH

--- a/VRChat/71/1294471.html
+++ b/VRChat/71/1294471.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hKlcWPaONN2p4/6N45WaxXLU9LzxzRiYwlF6s6eRojI="></script>
+    "MvNcCfhfyjKVLx+jEFZpBoiZA0t7jo1EGoI/lWOrUps="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料配布】1st EP [Mandara]","description":"バーチャルハンドパン奏者SIGMAΣによる1st EP。三千世界を覗き見て描いたインプロヴァイズ楽曲を4曲収録。\n\nトラックリスト\n1.Gravitys\n2.Dimension\n3.Devastate\n4.Faith\n\n投げ銭版限定ボーナストラック\n5.Deeper Night(Xystran feat. SIGMAΣ)\n\n\n規約\n・収録曲の有償二次配布、自作発言を禁止します。それ以外ならだいたいなんでもOKです\n・VRChatのワールドや各種BGMなどでご利用の際にはご一報いただけるとめちゃくちゃ喜びます","url":"https://booth.pm/ja/items/1294471","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5e3bdf99-d507-4e33-adb3-7284dd34cb3f/i/1294471/181a5b4e-4e85-4943-a8b5-d00f3d3e4ce3_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hKlcWPaONN2p4/6N45WaxXLU9LzxzRiYwlF6s6eRojI="></script>
+    nonce="MvNcCfhfyjKVLx+jEFZpBoiZA0t7jo1EGoI/lWOrUps="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1294471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1294471/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
