--- a/VRChat/77/1294977.html
+++ b/VRChat/77/1294977.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ct4e/6S4JG1OPmUdZ3TauIYaNE2m9/FWFbZITIUx7Tw="></script>
+    "T3hkEqFBJPdRbfoyVQ+Ebegt7nMN7GNqaZTx7DaYa/Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"元号 テーブル(無償版あり)","description":"元号テーブルです\n\n4/1の元号発表の時にあなただけの元号を発表してみませんか？\n\n\n【注意】\n本データはBlender上で制作されたものです。\nMaya等別のソフトウェアで読み込み時に不具合が生じる可能性がありますのでご了承ください。\n\n\n\nVRC,cluster向けのオリジナル3Dモデルです。\n\n\nポリゴン数(三角面)：2717\nマテリアル数：2\nFBX,Blenderファイル,Unityパッケージ,VRM\n\n本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n\n◆禁止事項\n・本データの再配布は禁止です。\n・粗末に扱うような行動。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n\n連絡先\nTwitter:@194_alert","url":"https://booth.pm/ja/items/1294977","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/d23f9e65-f92e-4097-a89c-7e4c1b80cd5b/i/1294977/3c203fe2-be37-469f-a6bd-aa141981f385_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ct4e/6S4JG1OPmUdZ3TauIYaNE2m9/FWFbZITIUx7Tw="></script>
+    nonce="T3hkEqFBJPdRbfoyVQ+Ebegt7nMN7GNqaZTx7DaYa/Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1294977/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1294977/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
