updated at: 2023-04-25 22:00, ふで - 蓮華庵 - BOOTH

--- a/VRChat/48/1294948.html
+++ b/VRChat/48/1294948.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xVoKvtBQUpJ/a30R1uQn9tI6AkuvZXzj4r/Y4Dtvz+g="></script>
+    "e1Hnn7Aek0SAU17IAaY2/ivshqC/eiK/AkrlgwsZaBY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふで","description":"FBX形式の筆の3Dモデルです。\n\nVRChatでの使用を想定しております。\n\n3Dモデルの練習として作ったので、ご自由にお使いください。\n\n筆先が　白　黒　赤　の3枚のpngファイルがはいっております。\n\n筆先にボーンを入れてありますので、ダイナミックボーンをご用意していただくと揺らすこともできます。\n\n\n※気に入っていただけたら『どんぐりのアクセサリ』を購入していただけると蓮華がよろこびます（*´ω｀)\nhttps://rengekomochiba.booth.pm/items/1583819","url":"https://booth.pm/ja/items/1294948","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2f0f402e-63da-4c0f-bd06-22c801de949b/i/1294948/a6a2c93b-39f3-45df-9f9b-0177904348ff_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xVoKvtBQUpJ/a30R1uQn9tI6AkuvZXzj4r/Y4Dtvz+g="></script>
+    nonce="e1Hnn7Aek0SAU17IAaY2/ivshqC/eiK/AkrlgwsZaBY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -151,10 +153,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1294948/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              78
+                              77
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -166,14 +168,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1294948/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              78
+                              77
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
