updated at: 2023-04-25 22:00, 心音もどき - Atree の作品集 - BOOTH

--- a/VRChat/23/1294623.html
+++ b/VRChat/23/1294623.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UTN664nSxOgk0DABE9NdlgowrLAjXmfCZzAaOY3lWgM="></script>
+    "xw4cZ628lLyEJ6QbX9nga+gG2O7OBbYC02+2ucFVKhU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"心音もどき","description":"心音もどき\n\n―――――\n\n心臓音のようなwavとmp3が同梱されています。\n・VRChatで自由に使ってください。それ以外でも構いません\n・私の声を元音声とするものなので著作権がどフリーで安心\n・他にもなんか作れる？　→　やってみます","url":"https://booth.pm/ja/items/1294623","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0c12740d-af49-4c44-8884-b5bb4ece3206/i/1294623/d42c474e-b3c8-48cc-9f87-0a5a8d2228d0_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UTN664nSxOgk0DABE9NdlgowrLAjXmfCZzAaOY3lWgM="></script>
+    nonce="xw4cZ628lLyEJ6QbX9nga+gG2O7OBbYC02+2ucFVKhU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1294623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              20
+                              21
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1294623/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              20
+                              21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
