updated at: 2023-04-25 22:02, 閃銘剣（せんめいのつるぎ） v2.00 - 産業廃棄物製作所直営産業廃棄物直売所 - BOOTH

--- a/VRChat/11/1012711.html
+++ b/VRChat/11/1012711.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OMxtSHfFnwuCz225fJPD7AKoeCbfkHFWQIBJ+Cg3Pvk="></script>
+    "9U9B38gid+xQOUzFE9g94uXUuChOmlAE3mMMv9c1ZZo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"閃銘剣（せんめいのつるぎ） v2.00","description":"オリジナル3Dモデル「閃銘剣」です。\nVRChatへの使用を前提としていますが、それ以外への利用も大丈夫です。\ntamaマテリアルにはGem Shaderの使用をおすすめします。\n\n・内容物\n　fbx　2種(剣本体、鞘)\n　2kサイズテクスチャ(剣)　3種（テクスチャ、ノーマル、メタリック）\n　1kサイズテクスチャ(鞘)　3種（テクスチャ、ノーマル、メタリック）\n　\n\nテクスチャはファイル名の最後尾が\nNはノーマル\nMはメタリック\n何もないものが通常テクスチャになります","url":"https://booth.pm/ja/items/1012711","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/34729524-be4f-4d18-959f-182804b8cf19/i/1012711/371ef62e-e4f8-4792-a9cf-e93181ecb1f3_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OMxtSHfFnwuCz225fJPD7AKoeCbfkHFWQIBJ+Cg3Pvk="></script>
+    nonce="9U9B38gid+xQOUzFE9g94uXUuChOmlAE3mMMv9c1ZZo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1012711/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1012711/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               30
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
