updated at: 2023-04-25 22:03, VRChat 輪切りレモン（無料版あり） - みんちゃん屋台 - BOOTH

--- a/VRChat/69/1292069.html
+++ b/VRChat/69/1292069.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "56roskX1nGLUKhySi+tLSk0WNoiQUOqTpq+E7B6YQ6Q="></script>
+    "/SHrw5c6B0X63dvaDztbiKbhfyWi2hKjuHNtfM/TmlA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat 輪切りレモン（無料版あり）","description":"輪切りレモンのfbx式3Dモデルです。\n髪飾りをイメージして作成しました。\n女の子アバターにつけてあげると可愛さ倍増です。\n蓮の葉のように避けているレモンもございます。\nご賞味ください。\n\n","url":"https://booth.pm/ja/items/1292069","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1292069/97dacea0-2651-4926-bd2d-c83720bff5d7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="56roskX1nGLUKhySi+tLSk0WNoiQUOqTpq+E7B6YQ6Q="></script>
+    nonce="/SHrw5c6B0X63dvaDztbiKbhfyWi2hKjuHNtfM/TmlA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1292069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1292069/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
