updated at: 2023-04-25 22:04, 【３Dモデルウェア】 - Parker - triangle_Cell - - KUYUYU/電脳屋 - BOOTH

--- a/VRChat/01/1291301.html
+++ b/VRChat/01/1291301.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tOzN+46USDU1RSQrOHpxyONTgZEfvbZIpk32nCtLjdA="></script>
+    "M8RjaGwe6Pb/TLrhkyrmbxdardOx/O1yjnYBhXWwv5o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Dモデルウェア】 - Parker - triangle_Cell - ","description":"※販売物はスキニング済みパーカーのみです。元々趣味で自分用に作ったものなので細かい形状の編集とかは難しいと思います。ちゃんと導入したい場合はBlender等での編集をお勧めします。両面あるのでウェイトも結構難易度が高いです。\n\nアップデート\n・＿＿＿1.0.1：ウェイトの調整\n・7/9：V1.0.2：スレンダーな時に自分で着る機会が有ったのでウェイトの一部調整、スレンダーな体系に合わせたタイプの追加。（それでも合わせられない人は居ると思うので気になる場合はBlender推奨）\n\nUnityがある程度利用できる事、GIMP、クリスタ等のペイントソフトがある程度使える事が前提に成っています。購入後の返金対応は出来ませんのでご注意ください。\n\n2021/07/30：サポートを終了した為、これ以降の更新は行われません。","url":"https://booth.pm/ja/items/1291301","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/3923a6a5-7600-4cc2-9240-d92591e77ceb/i/1291301/ad5d293a-4bb0-47e3-bc30-d3371ab77ade_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tOzN+46USDU1RSQrOHpxyONTgZEfvbZIpk32nCtLjdA="></script>
+    nonce="M8RjaGwe6Pb/TLrhkyrmbxdardOx/O1yjnYBhXWwv5o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1291301/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               675
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1291301/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               675
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
