updated at: 2023-04-25 22:05, 【VRC向け3Dモデル】m37Airweight風回転式拳銃 - きり猫製作所 - BOOTH

--- a/VRChat/81/1290981.html
+++ b/VRChat/81/1290981.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xrbj6A/clDoyyjps9L/JAcBl8ZVHVVPCBC5W+5AOg7M="></script>
+    "iyFXKpQBzd+5rA31P0XwsQLpSKQIJ3la5g82jb/rL90="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC向け3Dモデル】m37Airweight風回転式拳銃","description":"---【VRC向け3Dモデル】m37Airweight風回転式拳銃---\n今回は県警などで採用しているm37Airweight風回転式拳銃を作ってみました！\n\n--モデル詳細--\n\nポリゴン数:16899\nボーン数：11\n\nトリガー、ハンマーやシリンダーにボーンが仕込んであり、アニメーションを付けることで動かすことも可能です！！\n\n--付属品--\nRead me.txt\nm37Airweight風回転式拳銃.unitypackage\nBullet.prefab\nRevolver.prefab\n\n--お問い合わせ--\n\n不明な点や質問などありましたらこちらに連絡ください\n\nTwitter@tennnnteeeeeeee\n\n----------------\n\nCreated by Kirinekotomato\nArranged by Midomido\n© 2019 きり猫製作所.\n\n利用規約および本製品内容物に関する詳細はreadmeに記載しております\nーーーーーーー\n※この商品は2019年に出した初心者作成のモデルです。至らない点もあると思ういますがご理解の上、ご購入お願いいたします。by2021年きり猫\nーーーー","url":"https://booth.pm/ja/items/1290981","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/846b942a-5cc2-41b3-bf64-34997a23675e/i/1290981/b49d5f9d-fe40-45fe-88c1-597351b142ef_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xrbj6A/clDoyyjps9L/JAcBl8ZVHVVPCBC5W+5AOg7M="></script>
+    nonce="iyFXKpQBzd+5rA31P0XwsQLpSKQIJ3la5g82jb/rL90="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1290981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1290981/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
