updated at: 2023-04-25 22:05, 椿の髪飾り - りんごじゅ～す - BOOTH

--- a/VRChat/62/1290462.html
+++ b/VRChat/62/1290462.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "k85lhXey8ahN00mxuWzmMxuz1UvpchfZE5lbIUBCeuA="></script>
+    "P2qZ6XsRA+vprzZ/1eRet4Y385DYufypmaguiP1Tras="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"椿の髪飾り","description":"振袖姿に似合う椿の髪飾りのfbxモデルです～\nVRChatアバターやVRMのアクセサリとしてお使いください\n\n","url":"https://booth.pm/ja/items/1290462","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/629c352e-e1a6-41ad-93c6-1a028df6b5cd/i/1290462/92ce3ae1-1af5-4966-a7ad-2a3170eb802d_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k85lhXey8ahN00mxuWzmMxuz1UvpchfZE5lbIUBCeuA="></script>
+    nonce="P2qZ6XsRA+vprzZ/1eRet4Y385DYufypmaguiP1Tras="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1290462/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1290462/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
